Fix spacing.

--- a/app/assets/stylesheets/searches.scss
+++ b/app/assets/stylesheets/searches.scss
@@ -136,5 +136,5 @@ header.advanced-search {
 }
 
 #search_author, #seach_school {
-  display: none // selectized field is displayed over the standard simple_form field
+  // display: none // selectized field is displayed over the standard simple_form field
 }
